--- a/base_model2/config.yaml
+++ b/base_model2/config.yaml
@@ -4,3 +4,5 @@ train:
   max_epochs: 30
   device: "cuda"
   data_path: "data.json"
+  train_data_path: "../data/train_data.json"
+  val_data_path: "../data/val_data.json"
