--- a/base_model2/config.yaml
+++ b/base_model2/config.yaml
@@ -6,3 +6,4 @@ train:
   data_path: "data.json"
   train_data_path: "../data/train_data.json"
   val_data_path: "../data/val_data.json"
+  test_data_path: "../data/test_data.json"
