--- a/base_model4/config.yaml
+++ b/base_model4/config.yaml
@@ -1,13 +1,12 @@
 train:
   batch_size: 8
-  learning_rate: 0.00003
-  max_epochs: 20
   checkpoint_path: "models/checkpoint.pth"
   data_path: "data/data.json"
   test_data_path: "data/val_data.json"
-  train_data_path: "data/train_data.json"
-  val_data_path: "data/val_data.json"
-
+  train_data_path: "./data/train_data.json"
+  val_data_path: "./data/val_data.json"
+  learning_rate: 0.00005
+  max_epochs: 10
 eval:
   grading_model: "base_model"
   tree_overall_model: "data/y_overall_model.joblib"
