--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ base_model2/*.pth
 Eval/*.yaml
 Models/*
 Analysis/*.png
+llama_finetune/llama-3.2-3b-full-ft-interview-lowlr/checkpoint-102/model-00002-of-00002.safetensors
